build.gradle: toolchain 제거

--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,13 @@ plugins {
 
 group = 'com.capstone2025'
 version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
 
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
-}
+//java {
+//	toolchain {
+//		languageVersion = JavaLanguageVersion.of(17)
+//	}
+//}
 
 configurations {
 	compileOnly {
