--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,10 @@ plugins {
 
 group = 'com.capstone2025'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+java {
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
+}
 
 //java {
 //	toolchain {
