--- a/build.gradle
+++ b/build.gradle
@@ -6,16 +6,12 @@ plugins {
 
 group = 'com.capstone2025'
 version = '0.0.1-SNAPSHOT'
-java {
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
-}
 
-//java {
-//	toolchain {
-//		languageVersion = JavaLanguageVersion.of(17)
-//	}
-//}
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(17)
+	}
+}
 
 configurations {
 	compileOnly {
