--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,25 +1,15 @@
 spring:
   profiles:
-    active: local
- # 아래 mail 설정 해줘야함(실제 서버에서 메일 보내려면)
-  mail:
-    host: smtp.test.com
-    port: 465
-    username: test@mail.com
-    password: 1234
-    properties:
-      mail:
-        smtp:
-          auth: true
-          ssl:
-            enable: true
-            trust: smtp.test.com
-          starttls:
-            enable: true
-  data:
-    redis:
-      host: localhost
-      port: 6379
+    active: dev
+---
+spring:
+  config:
+    activate:
+      on-profile: local
+
+  custom:
+    auth:
+      allow-fixed-token: true
 
   datasource:
     url: jdbc:h2:mem:testdb  # 메모리 DB (실행 중에만 존재)
@@ -40,10 +30,127 @@ spring:
         enabled: true           # 웹으로 콘솔 접속 가능
         path: /h2-console       # 접속 URL: http://localhost:8080/h2-console
 
-code:
-  local-save-dir : C:/tmp/code-files
-  save-dir: /tmp/code-files
-  save-file: "solution"
+  mail:
+    host: smtp.test.com
+    port: 465
+    username: test@mail.com
+    password: 1234
+    properties:
+      mail:
+        smtp:
+          auth: true
+          ssl:
+            enable: true
+            trust: smtp.test.com
+          starttls:
+            enable: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+  code:
+    save-dir : C:/tmp/code-files
+    save-file: "solution"
+
+---
+spring:
+  config:
+    activate:
+      on-profile: dev
+
+  custom:
+    auth:
+      allow-fixed-token: true
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/roadcode?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: admin
+    password: roadcode
+
+    jpa:
+      hibernate:
+        ddl-auto: update
+      show-sql: true
+      properties:
+        hibernate:
+          format_sql: true
+
+  mail:
+    host: smtp.naver.com
+    port: 465
+    username: hiii717@naver.com
+    password: roadcode
+    properties:
+      mail:
+        smtp:
+          auth: true
+          ssl:
+            enable: true
+            trust: smtp.naver.com
+          starttls:
+            enable: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+  code:
+    save-dir : /tmp/code-files
+    save-file: "solution"
+
+  logging:
+    level:
+      org:
+        springframework: DEBUG
+      com:
+        zaxxer:
+          hikari:
+            DEBUG
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+
+  datasource:
+    url: jdbc:mysql://3.35.192.94:3306/roadcode
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: admin
+    password: roadcode
+
+    jpa:
+      hibernate:
+        ddl-auto: update
+      show-sql: true
+      properties:
+        hibernate:
+          format_sql: true
+
+  mail:
+    host: smtp.naver.com
+    port: 465
+    username: hiii717@naver.com
+    password: roadcode
+    properties:
+      mail:
+        smtp:
+          auth: true
+          ssl:
+            enable: true
+            trust: smtp.naver.com
+          starttls:
+            enable: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+  code:
+    save-dir: /tmp/code-files
+    save-file: "solution"
+
 #  docker:
 #    python:
 #      image: "python:3.11"
