--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	implementation 'com.mysql:mysql-connector-j:8.0.33'
+
+	implementation 'com.jcraft:jsch:0.1.55'
 }
 
 tasks.named('test') {
