build: openai key 환경변수 설정 및 profile=dev로 실행\n feat: Member, Submission entity @Builder 어노테이션 및 생성자 적용 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,10 @@ spring:
   profiles:
     active: local
 ---
+openai:
+  api:
+    key: ${OPENAI_API_KEY}
+
 spring:
   config:
     activate:
@@ -54,6 +58,10 @@ spring:
     save-file: "Solution"
 
 ---
+openai:
+  api:
+    key: ${OPENAI_API_KEY}
+
 spring:
   config:
     activate:
@@ -110,6 +118,10 @@ spring:
           hikari:
             DEBUG
 ---
+openai:
+  api:
+    key: ${OPENAI_API_KEY}
+
 spring:
   config:
     activate:
