--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Upload jar to EC2
         run: |
-          scp -i ~/.ssh/id_rsa build/libs/*.jar ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ec2-user/app/app.jar
+          scp -i ~/.ssh/id_rsa build/libs/RoadcodeApplication.jar ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ec2-user/app/app.jar
 
       - name: Execute deploy.sh on EC2
         run: |
