refactor: yml 파일 분리 및 jpa 들여쓰기 수정 - 새로운 노트북에서 h2 연결 안되는 문제 해결

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,182 +1,5 @@
 spring:
   profiles:
     active: local
----
-openai:
-  api:
-    key: ${OPENAI_API_KEY}
-
-spring:
   config:
-    activate:
-      on-profile: local
-
-  custom:
-    auth:
-      allow-fixed-token: true
-
-  datasource:
-    url: jdbc:h2:mem:testdb  # 메모리 DB (실행 중에만 존재)
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-
-    jpa:
-      hibernate:
-        ddl-auto: create-drop  # 개발 중에는 create, update, create-drop 중 택 1
-      show-sql: true
-      properties:
-        hibernate:
-          format_sql: true
-
-    h2:
-      console:
-        enabled: true           # 웹으로 콘솔 접속 가능
-        path: /h2-console       # 접속 URL: http://localhost:8080/h2-console
-
-  mail:
-    host: smtp.test.com
-    port: 465
-    username: test@mail.com
-    password: 1234
-    properties:
-      mail:
-        smtp:
-          auth: true
-          ssl:
-            enable: true
-            trust: smtp.test.com
-          starttls:
-            enable: true
-  data:
-    redis:
-      host: localhost
-      port: 6379
-
-  code:
-    save-dir : C:/tmp/code-files
-    save-file: "Solution"
-
----
-openai:
-  api:
-    key: ${OPENAI_API_KEY}
-
-spring:
-  config:
-    activate:
-      on-profile: dev
-
-  custom:
-    auth:
-      allow-fixed-token: true
-
-  datasource:
-    url: jdbc:mysql://db-roadcode.ctw84yo0m2vd.ap-northeast-2.rds.amazonaws.com:3306/roadcode
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: admin
-    password: roadcode
-
-    jpa:
-      hibernate:
-        ddl-auto: update
-      show-sql: true
-      properties:
-        hibernate:
-          format_sql: true
-        dialect: org.hibernate.dialect.MYSQLDialect
-
-  mail:
-    host: smtp.naver.com
-    port: 465
-    username: hiii717@naver.com
-    password: roadcode
-    properties:
-      mail:
-        smtp:
-          auth: true
-          ssl:
-            enable: true
-            trust: smtp.naver.com
-          starttls:
-            enable: true
-  data:
-    redis:
-      host: localhost
-      port: 6379
-
-  code:
-    save-dir : /tmp/code-files
-    save-file: "Solution"
-
-  logging:
-    level:
-      org:
-        springframework: DEBUG
-      com:
-        zaxxer:
-          hikari:
-            DEBUG
----
-openai:
-  api:
-    key: ${OPENAI_API_KEY}
-
-spring:
-  config:
-    activate:
-      on-profile: prod
-
-  datasource:
-    url: jdbc:mysql://localhost:13306/roadcode
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: admin
-    password: roadcode
-
-    jpa:
-      hibernate:
-        ddl-auto: update
-      show-sql: true
-      properties:
-        hibernate:
-          format_sql: true
-
-  mail:
-    host: smtp.naver.com
-    port: 465
-    username: hiii717@naver.com
-    password: roadcode
-    properties:
-      mail:
-        smtp:
-          auth: true
-          ssl:
-            enable: true
-            trust: smtp.naver.com
-          starttls:
-            enable: true
-  data:
-    redis:
-      host: localhost
-      port: 6379
-
-  code:
-    save-dir: /tmp/code-files
-    save-file: "Solution"
-
-#  docker:
-#    python:
-#      image: "python:3.11"
-#      file-extension: ".py"
-#      execute-command: "python /app/solution.py"
-#    java:
-#      image: "openjdk:17"
-#      file-extension: ".java"
-#      execute-command: "javac /app/Solution.java && java Solution"
-#    c:
-#      image: "gcc"
-#      file-extension: ".c"
-#      execute-command: "gcc /app/solution.c -o /app/solution && /app/solution"
-#logging:
-#  level:
-#    org.springframework.mail: DEBUG
+    import: application-local.yml
