fix: SMTP 비밀번호 변경 - 네이버는 앱 비밀번호 발급 해야함(2단계 인증)

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -26,7 +26,7 @@ spring:
     host: smtp.naver.com
     port: 465
     username: hiii717@naver.com
-    password: roadcode
+    password: F6TPUZFNB296
     properties:
       mail:
         smtp:
