fix: smtp 포트 번경 (465->587) 및 메일 로그 추가

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -24,7 +24,7 @@ spring:
 
   mail:
     host: smtp.naver.com
-    port: 465
+    port: 587
     username: hiii717@naver.com
     password: F6TPUZFNB296
     properties:
@@ -47,9 +47,7 @@ spring:
 
   logging:
     level:
-      org:
-        springframework: DEBUG
-      com:
-        zaxxer:
-          hikari:
-            DEBUG
+      org.springframework: DEBUG
+      org.springframeword.mail: DEBUG
+      com.zaxxer.hikari: DEBUG
+
