fix: smtp port 재변경(587->465) & ssl 설정 추가, starttls 설정 제거

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -24,15 +24,16 @@ spring:
 
   mail:
     host: smtp.naver.com
-    port: 587
+    port: 465
     username: hiii717@naver.com
     password: F6TPUZFNB296
     properties:
       mail:
         smtp:
           auth: true
-          starttls:
+          ssl:
             enable: true
+            trust: smtp.naver.com
   data:
     redis:
       host: localhost
