fix: yml 구조 변경(secret 추가) & smtp 앱 비밀번호 새로 발급 후 변경

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,9 +1,3 @@
-# application-local.yml
-
-openai:
-  api:
-    key: ${OPENAI_API_KEY}
-
 spring:
   custom:
     auth:
@@ -29,19 +23,13 @@ spring:
       path: /h2-console
 
   mail:
-    host: smtp.test.com
+    host: smtp.naver.com
     port: 465
-    username: test@mail.com
-    password: 1234
     properties:
-      mail:
-        smtp:
-          auth: true
-          ssl:
-            enable: true
-            trust: smtp.test.com
-          starttls:
-            enable: true
+      mail.smtp.auth: true
+      mail.smtp.ssl.enable: true
+      mail.smtp.starttls.enable: true
+      mail.smtp.ssl.trust: smtp.naver.com
 
   data:
     redis:
