--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,7 +1,3 @@
-openai:
-  api:
-    key: ${OPENAI_API_KEY}
-
 spring:
   datasource:
     url: jdbc:mysql://localhost:13306/roadcode
@@ -20,17 +16,12 @@ spring:
   mail:
     host: smtp.naver.com
     port: 465
-    username: hiii717@naver.com
-    password: roadcode
     properties:
-      mail:
-        smtp:
-          auth: true
-          ssl:
-            enable: true
-            trust: smtp.naver.com
-          starttls:
-            enable: true
+      mail.smtp.auth: true
+      mail.smtp.ssl.enable: true
+      mail.smtp.starttls.enable: true
+      mail.smtp.ssl.trust: smtp.naver.com
+
   data:
     redis:
       host: localhost
