fix: smtp (naver->gmail) 변경

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -14,13 +14,13 @@ spring:
         format_sql: true
 
   mail:
-    host: smtp.naver.com
-    port: 465
+    host: smtp.gmail.com
+    port: 587
     properties:
       mail.smtp.auth: true
-      mail.smtp.ssl.enable: true
       mail.smtp.starttls.enable: true
-      mail.smtp.ssl.trust: smtp.naver.com
+      mail.smtp.starttls.required: true
+      mail.smtp.ssl.trust: smtp.gmail.com
 
   data:
     redis:
