--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -19,15 +19,13 @@ spring:
       dialect: org.hibernate.dialect.MYSQLDialect
 
   mail:
-    host: smtp.naver.com
-    port: 465
+    host: smtp.gmail.com
+    port: 587
     properties:
-      mail:
-        smtp:
-          auth: true
-          ssl:
-            enable: true
-      mail.debug: true
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
+      mail.smtp.starttls.required: true
+      mail.smtp.ssl.trust: smtp.gmail.com
 
   data:
     redis:
