--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -23,13 +23,13 @@ spring:
       path: /h2-console
 
   mail:
-    host: smtp.naver.com
-    port: 465
+    host: smtp.gmail.com
+    port: 587
     properties:
       mail.smtp.auth: true
-      mail.smtp.ssl.enable: true
       mail.smtp.starttls.enable: true
-      mail.smtp.ssl.trust: smtp.naver.com
+      mail.smtp.starttls.required: true
+      mail.smtp.ssl.trust: smtp.gmail.com
 
   data:
     redis:
